# docs/swagger.json
@@ -4,6 +4,28 @@
         "contact": {}
     },
     "paths": {
+        "/castle-types": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CastleType"
+                ],
+                "summary": "取得所有城堡類型",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.CastleType"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/upload": {
             "post": {
                 "description": "上傳一張圖片並上傳至 Cloudinary，回傳圖片 URL",
@@ -52,6 +74,28 @@
                             }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "model.CastleType": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "name_zh": {
+                    "type": "string"
                 }
             }
         }
