# router/router.go
@@ -1,11 +1,12 @@
 package routes
 
 import (
-	"Castle_Go/handlers"
+	handlers "Castle_Go/handler"
 
 	"github.com/gin-gonic/gin"
 )
 
 func SetupRoutes(r *gin.Engine) {
 	r.POST("/upload", handlers.UploadCastleImage)
+	r.GET("/castle-types", handlers.GetAllCastleTypes)
 }
